--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <h1>Misel Skylar Moreno</h1>
         <h2>Matricula: zS22019945</h2>
 
-        <a href="https://skyning-javascript-e4563.web.app/"> click </a> </br>
+        <a href="https://skyningg.github.io/paradigmas-misel-moreno/"> click aquí</a> </br>
     
 </body>
 </html>
